# previsat_archive

./: CMakeLists.txt  PreviSat.pro  PreviSat_en.ts  PreviSat_ja.ts  PreviSat_jp.ts  README.md  afficher.cpp  afficher.h  afficher.ui  apropos.cpp  apropos.h  apropos.ui  gestionnairetle.cpp  gestionnairetle.h  gestionnairetle.ui  globals.h  icone.rc  informations.cpp  informations.h  informations.ui  main.cpp  notice.txt  previsat.cpp  previsat.h  previsat.ui  resources.qrc  telecharger.cpp  telecharger.h  telecharger.ui  threadcalculs.cpp  threadcalculs.h
data/: ISS-Live.asx  ISS-Live1.html  ISS-Live2.html  constlabel.cst  donnees.sat  etoiles.str  flares.sts  gestionnaireTLE_en.gst  gestionnaireTLE_en.xml  gestionnaireTLE_fr.gst  gestionnaireTLE_fr.xml  iridium.sts  meteo.map  meteoNASA.html  metop.sts  resultat.map  stations.sta  tdrs.sat
data/config/: categories.xml  configuration.xml  constnames.xml  flares.xml  gestionnaireElem.xml  gestionnaireTLE.xml  pays.xml  pre-launch.xml  sites.xml  stations.xml  tdrs.xml
data/coordinates/: france  france.xml  monde.xml  preferes  preferes.xml
data/coordonnees/: aapreferes  france  monde  preferes
data/flares/: flares.sts  iridium.sts
data/html/: NASA-TV-media.html  NASA-TV.html  chaines.chnl  chainesNASA.ht  meteo.map  meteoNASA.html  resultat.map
data/preferences/: defaut
dox/manuel/: doxygen_cfg_en.txt  doxygen_cfg_fr.txt  doxygen_cfg_ja.txt
dox/manuel/templates/: 0previsions_en.dox  0previsions_fr.dox  1flashs_en.dox  1flashs_fr.dox  2caracteristiques_en.dox  2caracteristiques_fr.dox  2transits_en.dox  2transits_fr.dox  3starlink_en.dox  3starlink_fr.dox
librairies/corps/: corps.cpp  corps.h
librairies/corps/etoiles/: constellation.cpp  constellation.h  etoile.cpp  etoile.h  ligneconstellation.cpp  ligneconstellation.h
librairies/corps/satellite/: conditionEclipse.cpp  conditionEclipse.h  conditioneclipse.cpp  conditioneclipse.h  elementsosculateurs.cpp  elementsosculateurs.h  magnitude.cpp  magnitude.h  phasage.cpp  phasage.h  satellite.cpp  satellite.h  satelliteconstants.h  sgp4.cpp  sgp4.h  signal.cpp  signal.h  tle.cpp  tle.h
librairies/corps/systemesolaire/: LuneConstants.h  SoleilConstants.h  TerreConstants.h  lune.cpp  lune.h  planete.cpp  planete.h  planeteConstants.h  soleil.cpp  soleil.h
librairies/dates/: date.cpp  date.h  dateConstants.h
librairies/exceptions/: message.cpp  message.h  messageConstants.h  messages.cpp  messages.h  messagesConstants.h  previsatexception.cpp  previsatexception.h
librairies/maths/: mathConstants.h  maths.cpp  maths.h  mathsConstants.h  matrice.cpp  matrice.h  matrice3d.cpp  matrice3d.h  vecteur3d.cpp  vecteur3d.h
librairies/observateur/: observateur.cpp  observateur.h
previsions/: conditions.cpp  conditions.h  evenements.cpp  evenements.h  flashs.cpp  flashs.h  iridium.cpp  iridium.h  metop.cpp  metop.h  prevision.cpp  prevision.h  previsionsConstants.h  transitiss.cpp  transitiss.h
resources/: icone.icns
resources/interface/: darkstyle.qss
src/: main.cpp
src/configuration/: calendrierlancements.h  categorieelementsorbitaux.h  configuration.cpp  configuration.cpp.rej  configuration.h  configurationconst.h  evenementsstation.h  evenementsstationspatiale.cpp  evenementsstationspatiale.h  fichierobs.cpp  fichierobs.h  frequencesradio.h  gestionnairexml.cpp  gestionnairexml.h  lancements.cpp  lancements.h  rentrees.cpp  rentrees.h  rentreesatmospheriques.h  satellitesflashs.h  satellitesstarlink.h  satellitetdrs.h
src/interface/: afficher.cpp  afficher.h  afficher.ui  afficherresultats.cpp  afficherresultats.h  afficherresultats.ui  apropos.cpp  apropos.h  apropos.ui  carte.cpp  carte.h  carte.ui  ciel.cpp  ciel.h  ciel.ui  coordiss.cpp  coordiss.h  gestionnairetle.cpp  gestionnairetle.h  gestionnairetle.ui  informations.cpp  informations.h  informations.ui  listWidgetItem.h  listwidgetitem.h  onglets.cpp  onglets.h  onglets.ui  previsat.cpp  previsat.h  previsat.ui  radar.cpp  radar.h  radar.ui  telecharger.cpp  telecharger.h  telecharger.ui  threadcalculs.cpp  threadcalculs.h
src/interface/apropos/: apropos.cpp  apropos.h  apropos.ui
src/interface/carte/: carte.cpp  carte.h  carte.ui  coordiss.cpp  coordiss.h  coordiss.ui  itemgroup.cpp  itemgroup.h
src/interface/ciel/: ciel.cpp  ciel.h  ciel.ui
src/interface/informations/: informations.cpp  informations.h  informations.ui
src/interface/logging/: logging.cpp  logging.h  logging.ui
src/interface/onglets/: onglets.cpp  onglets.h  onglets.ui
src/interface/options/: options.cpp  options.h  options.ui  telechargementoptions.cpp  telechargementoptions.h  telechargementoptions.ui
src/interface/outils/: outils.cpp  outils.h  outils.ui
src/interface/radar/: radar.cpp  radar.h  radar.ui
src/librairies/corps/: corps.cpp  corps.h  corpsconst.h  ephemerides.h  terreconst.h
src/librairies/dates/: date.cpp  date.h  dateconst.h
src/librairies/exceptions/: exception.cpp  exception.h  (+5 more)
src/previsions/: conditions.h  evenements.cpp  evenements.h  evenementsorbitaux.cpp  evenementsorbitaux.h  flashs.cpp  flashs.h  prevision.cpp  prevision.h  previsionsconst.h  telescope.cpp  telescope.h  transits.cpp  transits.h  transitsiss.cpp  transitsiss.h
test/elem/: flares-spctrk.txt  geo.txt  heo.txt  iss.gp  sgp4.txt  starlink-g6-19.xml  visual-nok10.txt  visual-nok11.txt  visual-nok12.txt  visual-nok13.txt  visual-nok2.txt  visual-nok3.txt  visual-nok5.txt  visual-nok6.txt  visual-nok7.txt  visual-nok8.txt  visual-nok9.txt  visual.xml  visual2.txt  visual_transits.xml
test/ref/: 20200815T0716_20200815T0723_25544.csv  evenements1_20200815_20200822.txt  flashs1_20200815_20200915.txt  onglet_elements1.txt  onglet_elements2.txt  onglet_elements3.txt  onglet_elements4.txt  onglet_general.txt  onglet_informations1.txt  onglet_informations2.txt  sgp4_ref.txt  starlink_20230930_20231007.txt  transits_20210501_20210601.txt  transits_20230205_20230307.txt  visual-ok.txt  visual.txt
test/src/: testtools.cpp  testtools.h  tst_previsattest.cpp
test/tle/: iss.3le
translations/: PreviSat_en.ts  PreviSat_ja.ts
(+284 files in other folders)
